kubernetes/22_deployment_backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - imagePullPolicy: Always
          name: container-0
          image: suterdev/mtg.inventory.backend
          ports:
          - name: http
            protocol: TCP
            containerPort: 80
      restartPolicy: Always
  replicas: 1
