kubernetes/30_service_db.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - name: psql
      port: 5432
      protocol: TCP
      targetPort: psql
  sessionAffinity: None
  type: ClusterIP
