kubernetes/40_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mtg-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mtg.example.com
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: backend-service
            port:
              number: 80
        path: /api
        pathType: Prefix
